fix: the ADR-0021 lambda bridge path never worked
Four independent defects, each alone fatal. None was caught because no test-mod
mixin contains a lambda and the two lambda unit tests only parsed the emitted
bytes -- the scanner fixtures hand-wrote the same wrong shapes the emitter
produced, so they agreed with each other and disagreed with the JVM.

1. LambdaWrapperEmitter built its bootstrap Handle naming "metafactory" but
   declaring (Lookup,String,MethodType,[Object)CallSite -- that is
   altMetafactory's signature. A MethodHandle constant resolves by exact
   name+descriptor, so the generated make() could never link.
2. The same call passed one derived type for both samMethodType and
   instantiatedMethodType. javac emits an erased SAM type and a specific
   instantiated type; conflating them is AbstractMethodError for every generic
   SAM -- Function, Supplier<String>, scala.Function1.
3. BridgeScanner read with SKIP_FRAMES and BridgeRewriter with flags 0, so the
   instruction index the scanner recorded and the one the rewriter looked up
   diverged by the number of stack-map frames before the site. Any mixin with a
   branch before a lambda was silently not rewritten while still emitting the
   LAMBDA_* field, the <clinit>, the wrapper classes and the manifest entries.
4. Instance synthetics were forced ACC_STATIC and copied verbatim, so their
   ALOAD 0 read a slot that no longer existed -> VerifyError.

1, 2 and 4 are fixed at the root: LambdaSite now carries the original bootstrap
Handle and the full bsmArgs, and the emitter replays them verbatim against the
relocated impl method instead of reconstructing them -- which also makes
altMetafactory's trailing args survive, so serializable lambdas really come back
Serializable. For 3, sites are keyed on the site's ordinal among the method's
INVOKEDYNAMIC instructions, which is immune to frame/label/line-number
differences; the reader flags are aligned as well.

Instance-capturing lambdas are now rejected rath